--- a/index.html
+++ b/index.html
@@ -1,23 +1,97 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ucapan Ulang Tahun</title>
   <style>
-    body { font-family: Arial; background: #ffecd2;
-           display: flex; align-items: center; justify-content: center;
-           flex-direction: column; min-height: 100vh; margin:0; text-align: center; }
-    h1 { color: #ff5e57; }
-    p { color: #333; font-size: 1.2em; max-width: 600px; }
-    img { margin-top: 20px; max-width: 100%; height: auto;
-          border-radius: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
+    body {
+      font-family: Arial;
+      background: #ffecd2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    h1, p {
+      color: #333;
+    }
+    .question {
+      font-size: 1.5em;
+      margin-bottom: 20px;
+    }
+    .button-group {
+      display: flex;
+      gap: 20px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 1em;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    #noBtn {
+      background-color: #ff5e57;
+      color: white;
+      position: relative;
+    }
+    #yesBtn {
+      background-color: #4caf50;
+      color: white;
+    }
+    #content {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+    }
+    img {
+      margin-top: 20px;
+      max-width: 100%;
+      height: auto;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
   </style>
 </head>
 <body>
-  <h1>Selamat Ulang Tahun!</h1>
-  <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai.</p>
-  <img src="36738.jpg" alt="Ucapan Ulang Tahun" />
+  <div id="intro">
+    <div class="question">Kamu Dera?</div>
+    <div class="button-group">
+      <button id="yesBtn">Iya</button>
+      <button id="noBtn">Tidak</button>
+    </div>
+  </div>
+
+  <div id="content">
+    <h1>Selamat Ulang Tahun!</h1>
+    <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai.</p>
+    <img src="36738.jpg" alt="Ucapan Ulang Tahun" />
+  </div>
+
+  <script>
+    const yesBtn = document.getElementById("yesBtn");
+    const noBtn = document.getElementById("noBtn");
+    const intro = document.getElementById("intro");
+    const content = document.getElementById("content");
+
+    yesBtn.addEventListener("click", () => {
+      intro.style.display = "none";
+      content.style.display = "flex";
+    });
+
+    noBtn.addEventListener("mouseover", () => {
+      const maxX = window.innerWidth - noBtn.offsetWidth;
+      const maxY = window.innerHeight - noBtn.offsetHeight;
+      const randomX = Math.floor(Math.random() * maxX);
+      const randomY = Math.floor(Math.random() * maxY);
+      noBtn.style.position = "absolute";
+      noBtn.style.left = randomX + "px";
+      noBtn.style.top = randomY + "px";
+    });
+  </script>
 </body>
 </html>
