--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="question">Kamu Dera?</div>
     <div class="button-group">
       <button id="yesBtn">Iya</button>
-      <button id="noBtn">Tidak</button>
+      <button id="noBtn">Bukan</button>
     </div>
   </div>
 
