--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <img src="https://via.placeholder.com/300x200.png?text=Selamat+Ulang+Tahun" alt="Ucapan Ulang Tahun" id="birthdayImage" />
     <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai.</p>
     <audio id="bgMusic" autoplay loop>
-      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+      <source src="happy.mp3" type="audio/mpeg">
     </audio>
   </div>
 
@@ -103,7 +103,7 @@
     <h2>Menu Musik</h2>
     <p>Selamat datang di bagian musik spesial 🎶</p>
     <audio controls autoplay>
-      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
+      <source src="special.mp3" type="audio/mpeg">
     </audio>
   </div>
 
