--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
 
   <div id="content">
-    <img src="https://via.placeholder.com/300x200.png?text=Selamat+Ulang+Tahun" alt="Ucapan Ulang Tahun" id="birthdayImage" />
+    <img src="36738.jpg" alt="Ucapan Ulang Tahun" id="birthdayImage" />
     <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai.</p>
     <audio id="bgMusic" autoplay loop>
       <source src="happy.mp3" type="audio/mpeg">
