--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div id="intro">
-    <div class="question">Kamu Dera?</div>
+    <div class="question"> Hai kamu Dera pacarnya idam bukan?</div>
     <div class="button-group">
       <button id="yesBtn">Iya</button>
       <button id="noBtn">Bukan</button>
@@ -86,7 +86,7 @@
   </div>
 
   <div id="passwordSection">
-    <div class="question">Silakan isi ini sesuai dengan umurmu yg sekarang</div>
+    <div class="question"> Kalo beneran dera coba isi ini dengan umurmu yang sekarang</div>
     <input type="number" id="passwordInput" placeholder="Masukkan angka" />
     <button id="submitPassword">Masuk</button>
   </div>
@@ -100,8 +100,8 @@
   </div>
 
   <div id="musicSection">
-    <h2>Menu Musik</h2>
-    <p>Selamat datang di bagian musik spesial 🎶</p>
+    <h2>Ini musik buat kamu ya cantik😍</h2>
+    <p>Semoga kamu suka 🎶</p>
     <audio controls autoplay>
       <source src="special.mp3" type="audio/mpeg">
     </audio>
