--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ucapan Ulang Tahun</title>
   <style>
+    @keyframes wiggle {
+      0%, 100% { transform: rotate(-3deg); }
+      50% { transform: rotate(3deg); }
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-5px); }
+    }
+
     body {
       font-family: Arial;
-      background: #ffecd2;
+      background: linear-gradient(to top right, #ffecd2, #fcb69f);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -15,37 +35,51 @@
       min-height: 100vh;
       margin: 0;
       text-align: center;
+      animation: fadeIn 1s ease-in;
     }
+
     .question {
-      font-size: 1.5em;
+      font-size: 1.7em;
       margin-bottom: 20px;
+      animation: wiggle 2s infinite;
     }
+
     .button-group {
       display: flex;
       gap: 20px;
     }
+
     button {
       padding: 10px 20px;
       font-size: 1em;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      transition: transform 0.2s;
+      animation: bounce 2s infinite;
     }
+
+    button:hover {
+      transform: scale(1.1) rotate(-2deg);
+    }
+
     #noBtn, #no2Btn {
       background-color: #ff5e57;
       color: white;
-      position: relative;
     }
+
     #yesBtn, #yes2Btn {
       background-color: #4caf50;
       color: white;
-      position: relative;
     }
+
     #content, #step2, #musicSection, #passwordSection {
       display: none;
       flex-direction: column;
       align-items: center;
+      animation: fadeIn 0.7s ease forwards;
     }
+
     img {
       margin-top: 20px;
       max-width: 90%;
@@ -53,10 +87,13 @@
       border-radius: 15px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       cursor: pointer;
+      animation: float 3s ease-in-out infinite;
     }
+
     audio {
       margin-top: 20px;
     }
+
     input[type="number"] {
       padding: 10px;
       font-size: 1em;
@@ -65,42 +102,51 @@
       margin-bottom: 10px;
       width: 200px;
       text-align: center;
+      animation: bounce 1.5s infinite;
+    }
+
+    h2 {
+      animation: wiggle 1.5s infinite;
+    }
+
+    p {
+      animation: fadeIn 2s ease-in;
     }
   </style>
 </head>
 <body>
   <div id="intro">
-    <div class="question"> Hai kamu Dera pacarnya idam bukan?</div>
+    <div class="question">Hai kamu Dera pacarnya Idam bukan? 😏</div>
     <div class="button-group">
-      <button id="yesBtn">Iya</button>
-      <button id="noBtn">Bukan</button>
+      <button id="yesBtn">Iya 😍</button>
+      <button id="noBtn">Bukan 🙄</button>
     </div>
   </div>
 
   <div id="step2">
-    <div class="question">Beneran Dera?</div>
+    <div class="question">Beneran Dera? 🤨</div>
     <div class="button-group">
-      <button id="yes2Btn">Iya</button>
-      <button id="no2Btn">Bukan</button>
+      <button id="yes2Btn">Iya 😇</button>
+      <button id="no2Btn">Bukan 😬</button>
     </div>
   </div>
 
   <div id="passwordSection">
-    <div class="question"> Kalo beneran dera coba isi ini dengan umurmu yang sekarang</div>
-    <input type="number" id="passwordInput" placeholder="Masukkan angka" />
-    <button id="submitPassword">Masuk</button>
+    <div class="question">Kalo beneran Dera coba isi ini dengan umurmu yang sekarang 🎂</div>
+    <input type="number" id="passwordInput" placeholder="Masukkan angka"/>
+    <button id="submitPassword">Masuk 🔐</button>
   </div>
 
   <div id="content">
-    <img src="36738.jpg" alt="Ucapan Ulang Tahun" id="birthdayImage" />
-    <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai.</p>
+    <img src="36738.jpg" alt="Ucapan Ulang Tahun" id="birthdayImage"/>
+    <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai 💖</p>
     <audio id="bgMusic" autoplay loop>
       <source src="happy.mp3" type="audio/mpeg">
     </audio>
   </div>
 
   <div id="musicSection">
-    <h2>Ini musik buat kamu ya cantik😍</h2>
+    <h2>Ini musik buat kamu ya cantik 😍</h2>
     <p>Semoga kamu suka 🎶</p>
     <audio controls autoplay>
       <source src="special.mp3" type="audio/mpeg">
@@ -146,7 +192,7 @@
         yes2Btn.style.left = Math.floor(Math.random() * maxX) + "px";
         yes2Btn.style.top = Math.floor(Math.random() * maxY) + "px";
         if (yes2ClickCount === 2) {
-          yes2Btn.textContent = "Yakin?";
+          yes2Btn.textContent = "Yakin? 😏";
         }
       } else {
         step2.style.display = "none";
@@ -166,7 +212,7 @@
         content.style.display = "flex";
         bgMusic.play();
       } else {
-        alert("Salah kocak");
+        alert("Salah kocak 😝");
       }
     });
 
