--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ucapan Ulang Tahun</title>
+  
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+  <!-- Confetti Library -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
   <style>
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
     @keyframes wiggle {
       0%, 100% { transform: rotate(-3deg); }
       50% { transform: rotate(3deg); }
@@ -25,9 +38,16 @@
       50% { transform: translateY(-5px); }
     }
 
+    @keyframes emojiWalk {
+      0% { left: -100px; }
+      100% { left: 110%; }
+    }
+
     body {
-      font-family: Arial;
-      background: linear-gradient(to top right, #ffecd2, #fcb69f);
+      font-family: 'Pacifico', cursive;
+      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fbc2eb, #a18cd1);
+      background-size: 400% 400%;
+      animation: gradientBG 12s ease infinite;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -36,6 +56,8 @@
       margin: 0;
       text-align: center;
       animation: fadeIn 1s ease-in;
+      padding: 20px;
+      overflow-x: hidden;
     }
 
     .question {
@@ -47,20 +69,26 @@
     .button-group {
       display: flex;
       gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     button {
       padding: 10px 20px;
       font-size: 1em;
       border: none;
-      border-radius: 8px;
+      border-radius: 12px;
       cursor: pointer;
-      transition: transform 0.2s;
+      transition: transform 0.2s, box-shadow 0.2s;
       animation: bounce 2s infinite;
+      background: #fff;
+      color: #444;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     button:hover {
-      transform: scale(1.1) rotate(-2deg);
+      transform: scale(1.15) rotate(-2deg);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
     }
 
     #noBtn, #no2Btn {
@@ -78,6 +106,12 @@
       flex-direction: column;
       align-items: center;
       animation: fadeIn 0.7s ease forwards;
+      background: #fff0f5;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      margin: 20px;
     }
 
     img {
@@ -85,7 +119,9 @@
       max-width: 90%;
       height: auto;
       border-radius: 15px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      border: 5px dashed pink;
+      padding: 10px;
+      background: white;
       cursor: pointer;
       animation: float 3s ease-in-out infinite;
     }
@@ -110,11 +146,30 @@
     }
 
     p {
+      font-size: 1.2em;
       animation: fadeIn 2s ease-in;
     }
+
+    /* Emoji animasi jalan */
+    .emoji {
+      position: absolute;
+      top: 80%;
+      font-size: 2rem;
+      animation: emojiWalk 15s linear infinite;
+    }
+
+    .emoji:nth-child(1) { animation-delay: 0s; }
+    .emoji:nth-child(2) { animation-delay: 5s; }
+    .emoji:nth-child(3) { animation-delay: 10s; }
   </style>
 </head>
 <body>
+  <!-- Emoji lucu berjalan -->
+  <div class="emoji">🎂</div>
+  <div class="emoji">🎈</div>
+  <div class="emoji">🐥</div>
+
+  <!-- Bagian Intro -->
   <div id="intro">
     <div class="question">Hai kamu Dera pacarnya Idam bukan? 😏</div>
     <div class="button-group">
@@ -153,6 +208,9 @@
     </audio>
   </div>
 
+  <!-- Efek suara klik -->
+  <audio id="clickSound" src="click.mp3" preload="auto"></audio>
+
   <script>
     const yesBtn = document.getElementById("yesBtn");
     const noBtn = document.getElementById("noBtn");
@@ -167,10 +225,18 @@
     const musicSection = document.getElementById("musicSection");
     const birthdayImage = document.getElementById("birthdayImage");
     const bgMusic = document.getElementById("bgMusic");
+    const clickSound = document.getElementById("clickSound");
 
     let yes2ClickCount = 0;
 
+    // Fungsi untuk mainkan suara klik
+    function playClick() {
+      clickSound.currentTime = 0;
+      clickSound.play();
+    }
+
     yesBtn.addEventListener("click", () => {
+      playClick();
       intro.style.display = "none";
       step2.style.display = "flex";
     });
@@ -184,6 +250,7 @@
     });
 
     yes2Btn.addEventListener("click", () => {
+      playClick();
       yes2ClickCount++;
       if (yes2ClickCount < 3) {
         const maxX = window.innerWidth - yes2Btn.offsetWidth;
@@ -201,22 +268,30 @@
     });
 
     no2Btn.addEventListener("click", () => {
+      playClick();
       step2.style.display = "none";
       intro.style.display = "flex";
     });
 
     submitPassword.addEventListener("click", () => {
+      playClick();
       const value = passwordInput.value;
       if (value === "20") {
         passwordSection.style.display = "none";
         content.style.display = "flex";
         bgMusic.play();
+        confetti({
+          particleCount: 200,
+          spread: 120,
+          origin: { y: 0.6 }
+        });
       } else {
         alert("Salah kocak 😝");
       }
     });
 
     birthdayImage.addEventListener("click", () => {
+      playClick();
       content.style.display = "none";
       musicSection.style.display = "flex";
       bgMusic.pause();
