--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
     <p>Semoga kamu suka 🎶</p>
     <audio controls autoplay>
       <source src="special.mp3" type="audio/mpeg">
+      <audio controls autoplay>
+      <source src="special2.mp3" type="audio/mpeg">
     </audio>
   </div>
 
