--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
 
   <div id="content">
     <img src="36738.jpg" alt="Ucapan Ulang Tahun" id="birthdayImage"/>
-    <p>Semoga di hari spesial ini, kamu diberkahi kebahagiaan, kesehatan, dan semua impianmu tercapai 💖</p>
+    <p>Selamat ulang tahun yang ke-20, sayangku cintaku cantiknya akuuuu. Hari ini adalah hari spesial, karena 20 tahun yang lalu, Tuhan menghadirkan seseorang yang luar biasa ke dunia ini — kamu. Mas bersyukur banget bisa jadi bagian dari hidupmu, semua jadi alasan kenapa mas makin sayang sama kamu setiap harinya. Di umur yang baru ini, mas doain semoga semua impianmu bisa tercapai, langkahmu makin ringan, dan hatimu selalu bahagia. Terus jadi deranya mas yang cantik imut manis yaaa. Terima kasih sudah selalu ada buat mas. Mas janji akan terus jaga kamu, sayaang kamuuu dan temani kamu bukan cuma di hari ulang tahun, tapi setiap hari, setiap waktu.
+Selamat ulang tahun, sayangku cintaku cantiknya akuuu. Mas cinta kamu, selamanya🫶🏽😘
+Btw fotonya bisa di klik loh</p>
     <audio id="bgMusic" autoplay loop>
       <source src="happy.mp3" type="audio/mpeg">
     </audio>
