--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
   <!-- Login -->
   <div id="loginSection">
     <div class="question">Login dulu yaa 🥰</div>
-    <input type="text" id="username" placeholder="Username (contoh: kocak)" />
-    <input type="password" id="passwordField" placeholder="Password (contoh: 102938)" />
+    <input type="text" id="username" placeholder="Username" />
+    <input type="password" id="passwordField" placeholder="Password" />
     <button id="loginButton">Login 🔓</button>
   </div>
 
@@ -248,7 +248,7 @@
         loginSection.style.display = "none";
         intro.style.display = "flex";
       } else {
-        alert("Login gagal yaa 😝");
+        alert("Login gagal username atau password salah! tanyain ke masmu sono");
       }
     });
 
